--- a/index.html
+++ b/index.html
@@ -102,13 +102,11 @@ body, html {
       <p><u><b>Definição:</b></u>  Mycobacterium tuberculosis murA confere resistência intrínseca à fosfomicina. Acredita-se que a presença de um resíduo de ácido aspártico no lugar da cisteína crítica na posição 117 que permite a ligação da fosfomicina seja responsável por esta resistência intrínseca.</p>
       <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
-      <b><u>Sequência:</u></b>
-      <ul>
-        <li>Comprimento: 418</li>
-        <li>Massa(Da): 44,064</li>
-        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=1470321&to=1471577" target="_blank" >Sequência DNA</a></li>
-        <li><a href="https://www.uniprot.org/uniprot/P9WJM1.fasta" target="_blank" >Sequência da proteina</a></li>
-      </ul>
+      <b><u>Sequência</u></b>
+      <p>Comprimento: 418</p>
+      <p>Massa(Da): 44,064</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=1470321&to=1471577" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P9WJM1.fasta" target="_blank" >Sequência da proteina</a></p>
     </div>
   </div>
 </div>
@@ -127,12 +125,10 @@ body, html {
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <ul>
-        <li>Comprimento: 1,827</li>
-        <li>Massa(Da): 193,315</li>
-        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></li>
-        <li><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></li>
-      </ul>
+      <p>Comprimento: 1,827</p>
+      <p>Massa(Da): 193,315</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
@@ -161,7 +157,7 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Sintomas</b>
-      <p> Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina in-gerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. aureus tem que estar presente numa concentração mínima de 105-106 por grama de alimen-to para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas – enterotoxinas – que são o agente res-ponsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favo-rável e os sintomas desaparecem normalmente ao fim de 48h.Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina in-gerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. aureus tem que estar presente numa concentração mínima de 105-106 por grama de alimen-to para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas – enterotoxinas – que são o agente res-ponsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favo-rável e os sintomas desaparecem normalmente ao fim de 48h.Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina in-gerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. aureus tem que estar presente numa concentração mínima de 105-106 por grama de alimen-to para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas – enterotoxinas – que são o agente res-ponsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favo-rável e os sintomas desaparecem normalmente ao fim de 48h. <p>
+      <p> Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina in-gerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. aureus tem que estar presente numa concentração mínima de 105-106 por grama de alimento para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas – enterotoxinas – que são o agente res-ponsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favo-rável e os sintomas desaparecem normalmente ao fim de 48h. <p>
     </div>
   </div>
 </div>
@@ -180,12 +176,10 @@ body, html {
       <p><u><b>Definição:</b></u> Identifica mutações para a isoleucil-tRNA sintetase em Staphylococcus aureus que conferem resistência à mupirocina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <ul>
-        <li>Comprimento: 917</li>
-        <li>Massa(Da): 104,885</li>
-        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_007795.1?report=fasta&log$=seqview&format=text&from=1107130&to=1109883" target="_blank" >Sequência DNA</a></li>
-        <li><a href="https://www.uniprot.org/uniprot/P41972.fasta" target="_blank" >Sequência da proteina</a></li>
-      </ul>
+      <p>Comprimento: 917</p>
+      <p>Massa(Da): 104,885</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_007795.1?report=fasta&log$=seqview&format=text&from=1107130&to=1109883" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P41972.fasta" target="_blank" >Sequência da proteina</a></p>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
@@ -207,12 +201,10 @@ body, html {
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <ul>
-        <li>Comprimento: 840</li>
-        <li>Massa(Da): 96,866</li>
-        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/HM140977.1?report=fasta&log$=seqview&format=text" target="_blank" >Sequência DNA</a></li>
-        <li><a href="https://www.uniprot.org/uniprot/Q2G2M2.fasta" target="_blank" >Sequência da proteina</a></li>
-      </ul>
+      <p>Comprimento: 840</p>
+      <p>Massa(Da): 96,866</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/HM140977.1?report=fasta&log$=seqview&format=text" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/Q2G2M2.fasta" target="_blank" >Sequência da proteina</a></p>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
@@ -235,6 +227,8 @@ function onClick(element) {
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
 }
+
+
 // Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
 
