--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Sintomas</b>
-      <p> Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina in-gerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. aureus tem que estar presente numa concentração mínima de 105-106 por grama de alimento para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas – enterotoxinas – que são o agente res-ponsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favo-rável e os sintomas desaparecem normalmente ao fim de 48h. <p>
+      <p> Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina ingerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. aureus tem que estar presente numa concentração mínima de 105-106 por grama de alimento para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas – enterotoxinas – que são o agente responsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favorável e os sintomas desaparecem normalmente ao fim de 48h. <p>
     </div>
   </div>
 </div>
