--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body, html {
       <p><u><b>Proteína:</b></u> Phosphatidylglycerol lysyltransferase</p>  
       <p><u><b>Gene:</b></u> mprF</p> 
       <p><u><b>Organismo:</b></u><i> Staphylococcus aureus</i></p>
-      <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
+      <p><u><b>Definição:</b></u> MprF é uma proteína de membrana integral que modifica o fosfatidilglicerol carregado negativamente na superfície da membrana.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
       <ul>
