--- a/index.html
+++ b/index.html
@@ -221,6 +221,24 @@ body, html {
   </div>
 </div>
 
+<div class="w3-container" style="min-height: 70%; padding-top: 80px;" id = "ileS">
+  <div class="w3-row-padding w3-left" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
+    <b class="w3-xlarge">Referências Bibliográficas</b>
+    <p></p>
+    <li>Yang, J. et al. Molecular characteristics and in vitro susceptibility to bedaquiline of Mycobacterium tuberculosis isolates circulating in Shaanxi, China. Int. J. Infect. Dis. 99, 163–170 (2020).</li> 
+    <li>Cole, S. et al. Deciphering the biology of Mycobacterium tuberculosis from the complete genome sequence. Nature 393, 537–544 (1998)</li> 
+    <li>BañUls, A. L., Sanou, A., Van Anh, N. T. & Godreuil, S. Mycobacterium tuberculosis: Ecology and evolution of a human bacterium. J. Med. Microbiol. 64, 1261–1269 (2015)</li> 
+    <li>Zubair, S. et al. Complete genome sequence of Staphylococcus aureus, strain ILRI_Eymole1/1, isolated from a Kenyan dromedary camel. Stand. Genomic Sci. 10, 1–12 (2015)</li> 
+    <li>D.lowy, F. & M.D. Lowy1998. N. Engl. J. Med. 339, 520–532 (1998)</li> 
+    <li>Dayan, G. H. et al. Staphylococcus aureus: the current state of disease, pathophysiology and strategies for prevention. Expert Rev. Vaccines 15, 1373–1392 (2016)</li> 
+    <li>Singh, M. et al. RNA Sequencing identifies a common physiology in vancomycin- And ciprofloxacin-tolerant staphylococcus aureus induced by iles mutations. Antimicrob. Agents Chemother. 64, (2020)</li> 
+    <li>Holden, M. T. G. et al. Complete genomes of two clinical Staphylococcus aureus strains: Evidence for the evolution of virulence and drug resistance. Proc. Natl. Acad. Sci. U. S. A. 101, 9786–9791 (2004)</li> 
+    <li>NENO, Miguel et al.. Tuberculose ganglionar: desafio diagnóstico. Arquivos de Medicina. Vol.28. 1.ed; 2014</li> 
+    
+  </div>
+</div>
+
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
