--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Sintomas</b>
-      <p> Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina ingerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. aureus tem que estar presente numa concentração mínima de 105-106 por grama de alimento para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas – enterotoxinas – que são o agente responsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favorável e os sintomas desaparecem normalmente ao fim de 48h. <p>
+      <p> As infecções por Staphylococcus aureus oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: foliculite, que é considerada a menos séria, o impetigo consiste em bolinhas rosadas com líquido que podem romper uma vez que causam comichão e dor, abscessos (furúnculos) são acúmulos de pus sob a pele, quentes e dolorosos, Celulite infecciosa é uma infecção da pele e dos tecidos, em que esta se espalha, causando dor e vermelhidão na pele, Necrólise epidérmica tóxica e, em recém-nascidos, síndrome da pele escaldada são infecções sérias. Ambas levam à descamação da pele em grande escala. <p>
     </div>
   </div>
 </div>
