--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body, html {
       <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de cepas resistentes. Atualmente, a mupirocina é o antibiótico usado contra a S. aureus e MDR (resistente à meticilina). </p>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
-      <b class="w3-xlarge">Infecções estafilocócicas - Sintomas</b>
+      <b class="w3-xlarge">Infecções Estafilocócicas - Sintomas</b>
       <p> As infecções por Staphylococcus aureus oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: foliculite, que é considerada a menos séria, o impetigo consiste em bolinhas rosadas com líquido que podem romper uma vez que causam comichão e dor, abscessos (furúnculos) são acúmulos de pus sob a pele, quentes e dolorosos, Celulite infecciosa é uma infecção da pele e dos tecidos, em que esta se espalha, causando dor e vermelhidão na pele, Necrólise epidérmica tóxica e, em recém-nascidos, síndrome da pele escaldada são infecções sérias. Ambas levam à descamação da pele em grande escala. <p>
     </div>
   </div>
