--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, html {
 
 
 <div class="w3-container" style="padding:60px 16px"  id="tuber"></div>
-  <h3 class="w3-center w3-xxlarge">Mycobacterium tuberculosis</h3>
+  <h3 class="w3-center w3-xxlarge"><i>Mycobacterium tuberculosis</i></h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
       <img src="images/Mycobacterium tuberculosis.jpg" alt="genoma" style="width:100%">
@@ -147,7 +147,7 @@ body, html {
 
 <!-- About Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="aureus">
-  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
+  <h3 class="w3-center w3-xxlarge"><i> Staphylococcus aureus</i></h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
        <img src="images/aureus_e_tabela.png" alt="aureus_img" style="width:100%">
