--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body, html {
     <!-- Right-sided navbar links -->
       <div class="topnav">
         <a href="#home"><i class="fas fa-home"></i>Home</a>
-        <a href="#ferram"><i class="fas fa-programs"></i>  Ferramentas Bioinformáticas </a>
+        <a href="#ferram"><i class="fas fa-tools"></i>  Ferramentas Bioinformáticas </a>
         <a href="#tuber"><i class="fas fa-bacterium"></i>    Mycobacterium tuberculosis</a>
         <a href="#mura"><i class="fas fa-bacterium"></i>    murA</a>
         <a href="#ppsd"><i class="fas fa-bacterium"></i>    ppsD</a>
