--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@ body, html {
   </div> 
 </header>
 
-
 <div class="w3-container" style="padding:60px 16px"  id="tuber"></div>
+  <h3 class="w3-center w3-xxlarge"><i>Mycobacterium tuberculosis</i></h3>
+  <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
+    <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
+      
+      
+<div class="w3-container w3-light-grey" style="padding:60px 16px"  id="tuber"></div>
   <h3 class="w3-center w3-xxlarge"><i>Mycobacterium tuberculosis</i></h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
@@ -89,7 +94,7 @@ body, html {
 </div>
 
 <!-- About Section -->
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "mura">
+<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "mura">
   <h3 class="w3-center w3-xxlarge">murA</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
@@ -115,7 +120,7 @@ body, html {
 </div>
 
 
-<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
   <h3 class="w3-center w3-xxlarge">ppsD</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-left:5%">
@@ -147,7 +152,7 @@ body, html {
 
 
 <!-- About Section -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px" id="aureus">
+<div class="w3-container" style="padding:128px 16px" id="aureus">
   <h3 class="w3-center w3-xxlarge"><i> Staphylococcus aureus</i></h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
@@ -167,7 +172,7 @@ body, html {
 </div>
 
 
-<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ileS">
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ileS">
   <h3 class="w3-center w3-xxlarge">ileS</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:15%">
@@ -194,7 +199,7 @@ body, html {
   </div>
 </div>
 
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "mprF">
+<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "mprF">
   <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
@@ -221,7 +226,7 @@ body, html {
   </div>
 </div>
 
-<div class="w3-container" style="min-height: 70%; padding-top: 100px;" id = "ileS">
+<div class="w3-container w3-light-grey" style="min-height: 70%; padding-top: 100px;" id = "ileS">
   <div class="w3-row-padding w3-left" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
     <b class="w3-xlarge">Referências Bibliográficas</b>
     <p></p>
