--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ body, html {
       <div class="topnav">
         <a href="#home"><i class="fas fa-home"></i>Home</a>
         <a href="#ferram"><i class="fas fa-tools"></i>  Ferramentas Bioinformáticas </a>
-        <a href="#tuber"><i class="fas fa-bacterium"></i>    Mycobacterium tuberculosis</a>
+        <a href="#tuber"><i class="fas fa-bacterium"></i>    Mycobacterium tuberculosis</i></a>
         <a href="#mura"><i class="fas fa-bacterium"></i>    murA</a>
         <a href="#ppsd"><i class="fas fa-bacterium"></i>    ppsD</a>
-        <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</a>
+        <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</i></a>
         <a href="#ileS"><i class="fas fa-bacterium"></i>    ileS</a>
         <a href="#mprF"><i class="fas fa-bacterium"></i>    mprF</a>
       </div>
