--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ body, html {
 
 <div class="w3-container w3-light-grey" style="min-height: 70%; padding-top: 100px;" id = "ileS">
   <div class="w3-row-padding w3-left" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
-    
-    <p> Crétidos :  </p>
+    <b class="w3-xlarge">Créditos </b>
+    <p> Grupo 5 (?????) confirmar </p>
     <b class="w3-xlarge">Referências Bibliográficas</b>
     <p></p>
     <li>Yang, J. et al. Molecular characteristics and in vitro susceptibility to bedaquiline of Mycobacterium tuberculosis isolates circulating in Shaanxi, China. Int. J. Infect. Dis. 99, 163–170 (2020).</li> 
