--- a/index.html
+++ b/index.html
@@ -168,7 +168,15 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Infecções Estafilocócicas - Sintomas</b>
-      <p> As infecções por Staphylococcus aureus oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: foliculite, que é considerada a menos séria, o impetigo consiste em bolinhas rosadas com líquido que podem romper uma vez que causam comichão e dor, abscessos (furúnculos) são acúmulos de pus sob a pele, quentes e dolorosos, Celulite infecciosa é uma infecção da pele e dos tecidos, em que esta se espalha, causando dor e vermelhidão na pele, Necrólise epidérmica tóxica e, em recém-nascidos, síndrome da pele escaldada são infecções sérias. Ambas levam à descamação da pele em grande escala. <p>
+       <p> As infecções por Staphylococcus aureus oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: </p> 
+       <ul>
+         <li>Foliculite</li>
+         <li>Abscessos (furúnculos)</li>
+         <li>Celulite infecciosa </li>
+         <li>Celulite infecciosa </li>
+         <li>Necrólise epidérmica tóxica</li>
+         <li>índrome da pele escaldada (em recém-nascidos)</li>
+       </ul>
     </div>
   </div>
 </div>
