--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Infecções Estafilocócicas - Sintomas</b>
-       <p> As infecções por Staphylococcus aureus oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: </p> 
+       <p> As infecções por <i>Staphylococcus aureus</i> oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: </p> 
        <ul>
          <li>Foliculite</li>
          <li>Abscessos (furúnculos)</li>
