--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
-      <p>Catalisa a ligação da isoleucina ao tRNA (Ile). Como o IleRS pode inadvertidamente acomodar e processar aminoácidos estruturalmente semelhantes, como a valina, para evitar tais erros, ele possui duas atividades de edição dependentes de tRNA (Ile) distintas adicionais. Uma atividade é designada como edição 'pré-transferência' e envolve a hidrólise do Val-AMP ativado. A outra atividade é designada edição 'pós-transferência' e envolve a desacilação de Val-tRNA (Ile) mal descarregado (por similaridade).</p>
+      <p>Catalisa a ligação da isoleucina ao tRNA (Ile)</p>
     </div>
   </div>
 </div>
