--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ body, html {
       <p><u><b>Organismo:</b></u> <i> Staphylococcus aureus</i></p>
       <p><u><b>Definição:</b></u> Identifica mutações para a isoleucil-tRNA sintetase em Staphylococcus aureus que conferem resistência à mupirocina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <p><u><b>Função Biológica:</b></u> Catalisa a ligação da isoleucina ao tRNA (Ile).</p>
       <b><u>Sequência</u></b>
       <ul>
         <li>Comprimento: 917</li>
@@ -201,9 +202,6 @@ body, html {
         <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_007795.1?report=fasta&log$=seqview&format=text&from=1107130&to=1109883" target="_blank" >Sequência DNA</a></li>
         <li><a href="https://www.uniprot.org/uniprot/P41972.fasta" target="_blank" >Sequência da proteina</a></li>
       </ul>
-     </div>
-      <b class="w3-xlarge">Função Biológica</b>
-      <p>Catalisa a ligação da isoleucina ao tRNA (Ile)</p>
     </div>
   </div>
 </div>
