--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body, html {
       <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de cepas resistentes. Atualmente, a mupirocina é o antibiótico usado contra a S. aureus e MDR (resistente à meticilina). </p>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
-      <u><b class="w3-xlarge">Características da bactériaInfecções Estafilocócicas - Sintomas</b></u>
+      <u><b class="w3-xlarge">Infecções Estafilocócicas - Sintomas</b></u>
        <p> As infecções por <i>Staphylococcus aureus</i> oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: </p> 
        <ul>
          <li>Foliculite</li>
