--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body, html {
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
       <b class="w3-xlarge">Características da bactéria</b>
-      <p>As bactérias do género <i>Mycobacterium</i>são bacilos (pleomórficos) gram positivo retos ou encurvados, cocobacilos, filamentosos ou formas ramificadas. Este organismo tem um comprimento de aproximadamente 1 a 10 μm, uma largura entre 0.2 e 0.6 μm e não formam esporo, flagelo ou cápsula. Apresenta uma parede complexa quanto à sua composição química, Lipídios de natureza hidrofóbica para a parede e ainda Bacilos Álcool Ácidos Resistentes (BAAR). Estas bactérias são intracelulares que infetam e proliferam-se no interior de macrófagos e linfócitos.</p>   
+      <p>As bactérias do género Mycobacterium são bacilos (pleomórficos) gram positivo retos ou encurvados, cocobacilos, filamentosos ou formas ramificadas. Este organismo tem um comprimento de aproximadamente 1 a 10 μm, uma largura entre 0.2 e 0.6 μm e não formam esporo, flagelo ou cápsula. Apresenta uma parede complexa quanto à sua composição química, Lipídios de natureza hidrofóbica para a parede e ainda Bacilos Álcool Ácidos Resistentes (BAAR). Estas bactérias são intracelulares que infetam e proliferam-se no interior de macrófagos e linfócitos.</p>   
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Tuberculose</b>
@@ -90,7 +90,7 @@ body, html {
       <b class="w3-xlarge">Sintomas</b>
       <p>Os sintomas da tuberculose estão principalmente relacionados com o desenvolvimento da bactéria nos pulmões, podendo haver tosse seca e persistente com ou sem sangue, perda de peso, dor no peito ao tossir e dificuldade respiratória. No entanto, quando a bactéria desenvolve-se em outros órgãos, é possível que surjam outros sintomas como cansaço excessivo, suor noturno, febre e inchaço no local em que a bactéria está instalada.</p>
       <b class="w3-xlarge">Ciclo de vida da bactéria</b>
-      <p>A resposta imunológica para a <i> Mycobacterium tuberculosis </i>não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões (7). A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
+      <p>A resposta imunológica para a Mycobacterium tuberculosis não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões (7). A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
     </div>
   </div>
 </div>
@@ -102,14 +102,14 @@ body, html {
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
       <img src="images/imagem_murA_MT_nowhite" alt="genoma" style="width:100%">
     </div>
-    <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Gene:</b></u> murA</p> 
+    <div class="w3-col l4 m9" style="margin-left:5%"> 
       <p><u><b>Proteína:</b></u> UDP-N-acetylglucosamine 1-carboxyvinyltransferase</p>  
+      <p><u><b>Gene:</b></u> murA</p>
       <p><u><b>Organismo:</b></u><i> Mycobacterium tuberculosis</i></p>
       <p><u><b>Localização subcelular:</b></u> Citoplasma e Citosol</p>
-      <p><u><b>Definição:</b></u> <i>Mycobacterium tuberculosis</i> murA confere resistência intrínseca à fosfomicina. Acredita-se que a presença de um resíduo de ácido aspártico no lugar da cisteína crítica na posição 117 que permite a ligação da fosfomicina seja responsável por esta resistência intrínseca.</p>
-      <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
+      <p><u><b>Definição:</b></u>  Mycobacterium tuberculosis murA confere resistência intrínseca à fosfomicina. Acredita-se que a presença de um resíduo de ácido aspártico no lugar da cisteína crítica na posição 117 que permite a ligação da fosfomicina seja responsável por esta resistência intrínseca.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
       <b><u>Sequência</u></b>
       <ul>
         <li>Comprimento: 418</li>
@@ -160,7 +160,7 @@ body, html {
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
       <b class="w3-xlarge">Características da bactéria</b>
-      <p><i>Staphylococcus aureus</i>(S. aureus) é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm e são caracterizadas pela forma de cocos, falta de mobilidade e por serem não-esporuladas.</h4> 
+      <p> Staphylococcus aureus (S. aureus) é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm e são caracterizadas pela forma de cocos, falta de mobilidade e por serem não-esporuladas.</h4> 
       <p> Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontre infetada, dos quais 10% a 20% são infetados de forma persistente.</p>   
       <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de estirpes resistentes. Atualmente, a mupirocina é o antibiótico usado contra a S. aureus e MDR (resistente à meticilina). </p>
     </div>
@@ -214,7 +214,7 @@ body, html {
       <p><u><b>Proteína:</b></u> Phosphatidylglycerol lysyltransferase</p>  
       <p><u><b>Gene:</b></u> mprF</p> 
       <p><u><b>Organismo:</b></u><i> Staphylococcus aureus</i></p>
-      <p><u><b>Definição:</b></u> MprF é uma proteína de membrana integral que modifica o fosfatidilglicerol carregado negativamente na superfície da membrana.</p>
+      <p><u><b>Definição:</b></u> MprF é um gene que modifica o fosfatidilglicerol carregado negativamente na superfície da membrana.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
       <ul>
@@ -226,7 +226,7 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
-      <p>Esta proteína é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.</p>
+      <p>Este gene é responsável pela transferência de um grupo lisil de L-lisil-tRNA para o fosfatidilglicerol ligado à membrana, produzindo lisilfosfatidilglicerol, um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese deste componente contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes.</p>
     </div>
   </div>
 </div>
@@ -234,7 +234,7 @@ body, html {
 <div class="w3-container w3-light-grey" style="min-height: 70%; padding-top: 100px;" id = "ileS">
   <div class="w3-row-padding w3-left" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
     <b class="w3-xlarge">Créditos </b>
-    <p> Grupo 5 (Roberto Bullitta, Rute Castro, Vânia Bento )  </p>
+    <p> Grupo 5 (?????) confirmar </p>
     <b class="w3-xlarge">Referências Bibliográficas</b>
     <p></p>
     <li>Yang, J. et al. Molecular characteristics and in vitro susceptibility to bedaquiline of Mycobacterium tuberculosis isolates circulating in Shaanxi, China. Int. J. Infect. Dis. 99, 163–170 (2020).</li> 
