--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ body, html {
       <p><u><b>Organismo:</b></u> <i> Staphylococcus aureus</i></p>
       <p><u><b>Definição:</b></u> Identifica mutações para a isoleucil-tRNA sintetase em Staphylococcus aureus que conferem resistência à mupirocina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
-      <p><u><b>Função Biológica:</b></u> Catalisa a ligação da isoleucina ao tRNA (Ile).</p>
+      <p><u><b>Função Biológica:</b></u> Catalisa a ligação da isoleucina ao tRNA.</p>
       <b><u>Sequência</u></b>
       <ul>
         <li>Comprimento: 917</li>
