--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@ body, html {
        <p> As infecções por <i>Staphylococcus aureus</i> oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: </p> 
        <p></p>
        <li>Foliculite</li>
-       <li>Abscessos (furúnculos)</li>
-       <li>Celulite infecciosa </li>
-       <li>Celulite infecciosa </li>
+       <li>Abscessos, também conhecidos por furúnculos</li>
+       <li>Celulite infecciosa</li>
+       <li>Celulite infecciosa</li>
        <li>Necrólise epidérmica tóxica</li>
        <li>índrome da pele escaldada (em recém-nascidos)</li>
     </div>
