--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <u><b class="w3-xlarge">Infecções Estafilocócicas - Sintomas</b></u>
-       <p> As infecções por <i>Staphylococcus aureus</i> oscilam de leves a potencialmente mortais. As infecções da pele devido a esta bactéria podem incluir as seguintes: </p> 
+       <p> As infecções por <i>Staphylococcus aureus</i> oscilam de leves a potencialmente mortais. Esta bactéria provoca infeções que afetam a pele e podem ser:</p> 
        <p></p>
        <li>Foliculite</li>
        <li>Abscessos, também conhecidos por furúnculos</li>
        <li>Celulite infecciosa</li>
        <li>Celulite infecciosa</li>
        <li>Necrólise epidérmica tóxica</li>
-       <li>índrome da pele escaldada (em recém-nascidos)</li>
+       <li>Índrome da pele escaldada (em recém-nascidos)</li>
     </div>
   </div>
 </div>
