--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body, html {
        <li>Abscessos, também conhecidos por furúnculos</li>
        <li>Celulite infeciosa</li>
        <li>Necrólise epidérmica tóxica</li>
-       <li>Índrome da pele escaldada (em recém-nascidos)</li>
+       <li>Síndrome da pele escaldada (em recém-nascidos)</li>
     </div>
   </div>
 </div>
