--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body, html {
       <p> Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontre infetada, dos quais 10% a 20% são infetados de forma persistente.</p>   
       <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de estirpes resistentes. Atualmente, a mupirocina é o antibiótico usado contra a S. aureus e MDR (resistente à meticilina). </p>
     </div>
-    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
+    <div class="w3-row-padding" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <u><b class="w3-xlarge">Infecções Estafilocócicas - Sintomas</b></u>
        <p> As infeções por <i>Staphylococcus aureus</i> oscilam de leves a potencialmente mortais. Esta bactéria provoca infeções que afetam a pele e podem ser:</p> 
        <p></p>
